[package]
name = "spl-governance-test-sdk"
version = "0.1.4"
description = "Solana Program Library Governance Program Test SDK"
authors = ["Solana Labs Maintainers <maintainers@solanalabs.com>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[dependencies]
arrayref = "0.3.7"
bincode = "1.3.2"
borsh = "1.4.0"
lazy_static = "1.4.0"
num-derive = "0.4"
num-traits = "0.2"
serde = "1.0.197"
serde_derive = "1.0.103"
solana-program = ">=1.18.2,<=2"
solana-program-test = ">=1.18.2,<=2"
solana-sdk = ">=1.18.2,<=2"
spl-token = { version = "4.0", path = "../../token/program", features = [
  "no-entrypoint",
] }
spl-token-2022 = { version = "3.0.2", path = "../../token/program-2022", features = [
  "no-entrypoint",
] }
spl-transfer-hook-interface = { version = "0.6.3", path = "../../token/transfer-hook/interface" }
spl-token-client = { version = "0.9.2", path = "../../token/client" }
thiserror = "1.0"
